<resources>
    <!--登入页-->
    <string name="app_name">玻璃信息</string>
    <string name="inputNo">请输入工号</string>
    <string name="inputPassword">请输入密码</string>
    <string name="login">登录</string>
    <string name="skip">跳过</string>
    <string name="logining">登录中</string>
    <string name="updating">提交中</string>
    <string name="noEmpty">工号为空</string>
    <string name="passwordEmpty">密码为空</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="old_password">输入原密码</string>
    <string name="new_password">输入新密码</string>
    <string name="check_password">确认密码</string>
    <string name="sub_tip">We pursue precise glass information</string>

    <!--主页面-->
    <string name="tabPush">推送</string>
    <string name="tabMember">成员</string>
    <string name="tabAbout">关于</string>
    <string name="againExit">再按一次退出</string>
    <string name="add">新建</string>
    <string name="detail">详情</string>
    <string name="edit">修改</string>
    <string name="delete">删除</string>
    <string name="allSelect">全选</string>
    <string name="manager">管理</string>
    <string name="share">分享</string>
    <string name="log_off">注销</string>
    <string name="account">账号</string>
    <string name="search">搜索</string>
    <string name="sync">同步</string>
    <string name="upload">上传</string>
    <string name="download">下载</string>
    <string name="sort">排序</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="ok">确定</string>
    <string name="refresh">重新加载</string>
    <string name="noData">暂无数据</string>
    <string name="refreshFail">加载失败</string>
    <string name="clickRetry">点击重试</string>


    <!--主页-设置页-->
    <string name="userInfo">用户信息</string>
    <string name="pushSetting">推送设置</string>
    <string name="appSetting">应用设置</string>
    <string name="aboutApp">关于应用</string>
    <string name="checkUpdate">检查更新</string>
    <string name="callback">反馈</string>
    <string name="logout">退出</string>
    <string name="logoutAccount">退出账号</string>
    <string name="exitApp">关闭应用</string>
    <string name="editUrl">修改地址</string>
    <string name="instantPush">即时推送</string>
    <string name="instantTish">即时推送:本机</string>


    <!--主页-推送页-->
    <string name="order_by">排序方式：</string>
    <string name="push_tab1">推送</string>
    <string name="push_tab2">预警</string>
    <string name="sort_by_date">推送时间</string>
    <string name="sort_by_read">未读推送</string>
    <string name="push">推送</string>
    <string name="push_detail">推送详情</string>

    <!--主页-推送页-查看图表-->
    <string name="produceData">生产数据</string>
    <string name="produceCount">生产量</string>
    <string name="produceModel">生产型号</string>
    <string name="produceQuality">产品质量</string>
    <string name="produceEnergy">生产能耗</string>
    <string name="saleData">销售数据</string>
    <string name="saleCount">销售额</string>
    <string name="saleProfit">销售利润</string>
    <string name="saleModel">销售型号</string>
    <string name="saleCustomer">买家分布</string>


    <!--主页-成员页-->
    <string name="order_by_name">姓名</string>
    <string name="order_by_role">部门</string>


    <!--主页-成员页-新建成员-->
    <string name="adding">新建中</string>
    <string name="addSuccess">新建成功</string>


    <string name="inputName">输入姓名</string>
    <string name="pleaseInputName">请输入姓名</string>
    <string name="name">姓名</string>

    <string name="createRole">建立角色</string>
    <string name="sectionA">行政部门</string>
    <string name="sectionD">研发部门</string>
    <string name="sectionU">采购部门</string>
    <string name="sectionR">生产部门</string>
    <string name="sectionW">仓储部门</string>
    <string name="sectionQ">质检部门</string>
    <string name="sectionS">销售部门</string>
    <string name="sectionF">财务部门</string>
    <string name="userNo">工号</string>
    <string name="userSection">部门</string>


    <string name="otherInfo">其他信息</string>
    <string name="inputEmail">请输入邮箱</string>
    <string name="inputPhone">请输入手机</string>
    <string name="nextStep">下一步</string>
    <string name="prevStep">上一步</string>

    <string name="complete">完成</string>

    <!--主页-成员页-查看详情-->
    <string name="detail_tab1">个人信息</string>
    <string name="detail_tab2">身份信息</string>
    <string name="email">邮箱</string>
    <string name="phone">电话</string>
    <string name="send_email">发送邮件</string>
    <string name="send_sms">发送短信</string>
    <string name="call_phone">拨打电话</string>

    <!--主页-设置页-个人信息-->
    <string name="save">保存</string>
    <string name="saving">保存中</string>
    <string name="saveSuccess">保存成功</string>
    <string name="editPassword">修改密码</string>
    <string name="isThisPhone">我是本机</string>
    <string name="isntThisPhone">我不是本机</string>
    <string name="openCamera">打开相机</string>
    <string name="openGallery">打开相册</string>
    <string name="sketchImage">查看大图</string>
    <string name="uploadPic">上传相片</string>

    <!--主页-设置页-推送设置-->
    <string name="switch_set">接受通知</string>
    <string name="sound">声音</string>
    <string name="vibrate">震动</string>
    <string name="flags">指示灯</string>
    <string name="push_set">推送设置</string>
    <string name="date_set">日期设置</string>
    <string name="push_switch">接受数据推送</string>
    <string name="push_time">推送时间</string>
    <string name="push_tags">推送标签</string>
    <string name="alarm_switch">接受数据预警</string>
    <string name="add_alarm_tag">添加标签</string>
    <string name="min_value">最小值</string>
    <string name="max_value">最大值</string>


    <string name="expand_string">more</string>
    <string name="collapsed_string">less</string>

</resources>
