<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_topbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/qmui_config_color_white"
        android:orientation="vertical"
        android:paddingStart="@dimen/step_horizontal_margin"
        android:paddingTop="@dimen/step0_vertical_margin"
        tools:ignore="UselessParent">

        <moe.feng.common.stepperview.VerticalStepperItemView
            android:id="@+id/stepper_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:step_activated_color="@color/colorPrimaryDark"
            app:step_index="1"
            app:step_normal_color="@color/colorPrimary"
            app:step_state="selected"
            app:step_title="@string/inputName">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/button_skip_0"
                    android:hint="@string/pleaseInputName"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="@string/name"
                    app:met_floatingLabelTextColor="?attr/colorPrimaryDark"
                    app:met_singleLineEllipsis="true"
                    app:met_underlineColor="?attr/colorPrimaryDark" />

                <Button
                    android:id="@+id/button_next_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/inputName"
                    android:layout_marginTop="@dimen/setp_buttons_vertical_margin"
                    android:backgroundTint="?attr/colorPrimary"
                    android:text="@string/nextStep"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button_skip_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/button_next_0"
                    android:layout_marginStart="@dimen/setp_button_2_horizontal_margin"
                    android:layout_toEndOf="@id/button_next_0"
                    android:text="@string/skip" />

            </RelativeLayout>

        </moe.feng.common.stepperview.VerticalStepperItemView>

        <moe.feng.common.stepperview.VerticalStepperItemView
            android:id="@+id/stepper_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/other_step_vertical_margin"
            app:step_activated_color="@color/colorPrimaryDark"
            app:step_index="2"
            app:step_normal_color="@color/colorPrimary"
            app:step_title="@string/createRole">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/roleSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/button_prev_1"
                    android:layout_toEndOf="@id/roleSpinner" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/newUserNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/roleSpinner"
                    android:layout_alignEnd="@id/button_prev_1"
                    android:layout_marginStart="@dimen/setp_2_text_horizontal_margin"
                    android:enabled="false"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="@string/userNo"
                    app:met_hideUnderline="true"
                    app:met_underlineColor="?attr/colorPrimaryDark" />

                <Button
                    android:id="@+id/button_next_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/newUserNo"
                    android:layout_marginTop="@dimen/setp_buttons_vertical_margin"
                    android:backgroundTint="?attr/colorPrimary"
                    android:text="@string/nextStep"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button_prev_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/button_next_1"
                    android:layout_marginStart="@dimen/setp_button_2_horizontal_margin"
                    android:layout_toEndOf="@id/button_next_1"
                    android:text="@string/prevStep" />

            </RelativeLayout>

        </moe.feng.common.stepperview.VerticalStepperItemView>

        <moe.feng.common.stepperview.VerticalStepperItemView
            android:id="@+id/stepper_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/other_step_vertical_margin"
            app:step_activated_color="@color/colorPrimaryDark"
            app:step_index="3"
            app:step_is_last="true"
            app:step_normal_color="@color/colorPrimary"
            app:step_title="@string/otherInfo">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputEmailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextInputLayoutSelect"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="@dimen/input_drawable_padding"
                        android:fontFamily="@font/calibri"
                        android:hint="@string/inputEmail"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="@dimen/input_text_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputPhoneLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/inputEmailLayout"
                    android:theme="@style/EditTextInputLayoutSelect"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/inputPhone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_phone"
                        android:drawablePadding="@dimen/input_drawable_padding"
                        android:fontFamily="@font/calibri"
                        android:hint="@string/inputPhone"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="@dimen/input_text_size" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/button_next_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/inputPhoneLayout"
                    android:layout_marginTop="@dimen/setp_buttons_vertical_margin"
                    android:backgroundTint="?attr/colorPrimary"
                    android:text="@string/complete"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button_prev_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/button_next_2"
                    android:layout_marginStart="@dimen/setp_button_2_horizontal_margin"
                    android:layout_toEndOf="@id/button_next_2"
                    android:text="@string/prevStep" />


            </RelativeLayout>

        </moe.feng.common.stepperview.VerticalStepperItemView>

    </LinearLayout>

</LinearLayout>