<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/header_push_height"
    android:background="@color/qmui_config_color_transparent">

    <RadioButton
        android:id="@+id/all_select_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="12dp" />


    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/all_select_btn"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@id/all_select_radio"
        android:padding="5dp"
        android:text="@string/allSelect"
        app:qmui_borderColor="@color/colorPrimaryDark" />

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/cancel_btn"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:text="@string/cancel"
        app:qmui_borderColor="@color/colorPrimaryDark" />


    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/delete_btn"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@id/cancel_btn"
        android:padding="5dp"
        android:text="@string/delete"
        app:qmui_borderColor="@color/colorPrimaryDark" />

</RelativeLayout>
