<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/header_push_height"
    android:background="@color/tabBackground">

    <RadioButton
        android:id="@+id/all_select_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dp_12" />


    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/all_select_btn"
        android:layout_width="@dimen/dp_60"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dp_6"
        android:layout_marginTop="@dimen/select_bar_btn_padding"
        android:layout_marginBottom="@dimen/select_bar_btn_padding"
        android:layout_toEndOf="@id/all_select_radio"
        android:padding="@dimen/select_bar_btn_padding"
        android:text="@string/allSelect"
        android:textColor="@color/colorText_Icon"
        app:qmui_backgroundColor="@color/all_select"
        app:qmui_borderColor="@color/all_select" />

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/cancel_btn"
        android:layout_width="@dimen/dp_60"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/select_bar_btn_padding"
        android:layout_marginEnd="@dimen/dp_12"
        android:layout_marginBottom="@dimen/select_bar_btn_padding"
        android:padding="@dimen/select_bar_btn_padding"
        android:text="@string/cancel"
        android:textColor="@color/colorText_Icon"
        app:qmui_backgroundColor="@color/cancel"
        app:qmui_borderColor="@color/cancel" />


    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/delete_btn"
        android:layout_width="@dimen/dp_60"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/select_bar_btn_padding"
        android:layout_marginEnd="@dimen/dp_12"
        android:layout_marginBottom="@dimen/select_bar_btn_padding"
        android:layout_toStartOf="@id/cancel_btn"
        android:padding="@dimen/select_bar_btn_padding"
        android:text="@string/delete"
        android:textColor="@color/colorText_Icon"
        app:qmui_backgroundColor="@color/delete"
        app:qmui_borderColor="@color/delete" />

</RelativeLayout>
